Criando evento para o botao e navegando programaticamente para a tela TransactionAdd

--- a/AppControleFinanceiro/Views/TransactionAdd.xaml
+++ b/AppControleFinanceiro/Views/TransactionAdd.xaml
@@ -5,8 +5,9 @@
              Title="TransactionAdd">
     <VerticalStackLayout>
         <Label 
-            Text="Welcome to .NET MAUI!"
+            Text="Transaction Add"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
+
     </VerticalStackLayout>
 </ContentPage>
