--- a/AppControleFinanceiro/Views/TransactionAdd.xaml
+++ b/AppControleFinanceiro/Views/TransactionAdd.xaml
@@ -4,10 +4,27 @@
              x:Class="ControleFinanceiro.Views.TransactionAdd"
              Title="TransactionAdd">
     <VerticalStackLayout>
-        <Label 
-            Text="Transaction Add"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Border BackgroundColor="Black"
+                Padding="15"
+                StrokeShape="RoundRectangle 30"
+                Margin="10"
+                Stroke="Transparent">
+            <Grid
+                RowDefinitions="Auto"
+                ColumnDefinitions="*, 30">
 
+                <Label Grid.Column="0"
+                    Text="Novo"
+                    HorizontalOptions="CenterAndExpand"
+                    TextColor="White"
+                    FontSize="Medium"/>
+                <Label Grid.Column="1"
+                    Text="+"
+                    HorizontalOptions="Center"
+                    TextColor="White"
+                    FontSize="Medium"/>
+
+            </Grid>
+        </Border>
     </VerticalStackLayout>
 </ContentPage>
