--- a/AppControleFinanceiro/Views/TransactionAdd.xaml
+++ b/AppControleFinanceiro/Views/TransactionAdd.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ControleFinanceiro.Views.TransactionAdd"
              Title="TransactionAdd">
-    <VerticalStackLayout>
+    <VerticalStackLayout Spacing="10">
         <Border BackgroundColor="Black"
                 Padding="15"
                 StrokeShape="RoundRectangle 30"
@@ -26,5 +26,21 @@
 
             </Grid>
         </Border>
+        <Grid ColumnDefinitions="*,*" Margin="10,0">
+            <RadioButton
+                IsChecked="True"
+                Content="Receita"
+                Grid.Column="0"/>
+            <RadioButton
+                IsChecked="False"
+                Content="Despesa"
+                HorizontalOptions="End"
+                Grid.Column="1"/>
+        </Grid>
+
+        <Entry Placeholder="Nome" Margin="15"/>
+        <DatePicker Margin="15"/>
+        <Entry Placeholder="Valor" Margin="15"/>
+        <Button Text="Salvar" Margin="15" HorizontalOptions="CenterAndExpand"/>
     </VerticalStackLayout>
 </ContentPage>
