--- a/AppControleFinanceiro/Views/TransactionAdd.xaml
+++ b/AppControleFinanceiro/Views/TransactionAdd.xaml
@@ -18,11 +18,15 @@
                     HorizontalOptions="CenterAndExpand"
                     TextColor="White"
                     FontSize="Medium"/>
-                <Label Grid.Column="1"
-                    Text="+"
+                <Image Grid.Column="1"
                     HorizontalOptions="Center"
-                    TextColor="White"
-                    FontSize="Medium"/>
+                    Source="close.png"
+                    WidthRequest="17">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                    </Image.GestureRecognizers>
+
+                </Image>
 
             </Grid>
         </Border>
