--- a/AppControleFinanceiro/Views/TransactionList.xaml
+++ b/AppControleFinanceiro/Views/TransactionList.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ControleFinanceiro.Views.TransactionList"
+             NavigationPage.HasNavigationBar="False"
              Title="Listagem">
     <VerticalStackLayout>
         <Label 
@@ -9,8 +10,12 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
 
-        <Button Text="Novo" Clicked="OnButtonClicked_GoTo_TransactionAdd" />
-        <Button Text="Editar" Clicked="OnButtonClicked_GoTo_TransactionEdit" />
+        <Button Text="Novo"
+                Clicked="OnButtonClicked_GoTo_TransactionAdd"
+                HorizontalOptions="Center"/>
+        <Button Text="Editar"
+                Clicked="OnButtonClicked_GoTo_TransactionEdit"
+                HorizontalOptions="Center"/>
 
     </VerticalStackLayout>
 </ContentPage>
