--- a/AppControleFinanceiro/Views/TransactionAdd.xaml
+++ b/AppControleFinanceiro/Views/TransactionAdd.xaml
@@ -30,21 +30,30 @@
 
             </Grid>
         </Border>
+
+        <Label x:Name="LabelError" IsVisible="False" TextColor="Red" />
+
         <Grid ColumnDefinitions="*,*" Margin="10,0">
             <RadioButton
+                x:Name="RadioIncome"
                 IsChecked="True"
                 Content="Receita"
                 Grid.Column="0"/>
             <RadioButton
+                x:Name="RadioExpense"
                 IsChecked="False"
                 Content="Despesa"
                 HorizontalOptions="End"
                 Grid.Column="1"/>
         </Grid>
 
-        <Entry Placeholder="Nome" Margin="15"/>
-        <DatePicker Margin="15"/>
-        <Entry Placeholder="Valor" Margin="15"/>
-        <Button Text="Salvar" Margin="15" HorizontalOptions="CenterAndExpand"/>
+        <Entry x:Name="EntryName" Placeholder="Nome" Margin="15"/>
+        <DatePicker x:Name="DatePickerDate" Margin="15"/>
+        <Entry x:Name="EntryValor" Placeholder="Valor" Margin="15"/>
+        <Button
+            Clicked="OnButtonClicked_Save"
+            Text="Salvar"
+            Margin="15"
+            HorizontalOptions="CenterAndExpand"/>
     </VerticalStackLayout>
 </ContentPage>
