Listando as transacoes e atraves de collectionView e DataTemplate

--- a/AppControleFinanceiro/Views/TransactionList.xaml
+++ b/AppControleFinanceiro/Views/TransactionList.xaml
@@ -8,24 +8,35 @@
         <ResourceDictionary Source="/Resources/Styles/Colors.xaml" />
     </ContentPage.Resources>
     <VerticalStackLayout>
-        <Grid ColumnDefinitions="50,*,Auto" Padding="15">
-            <Label Text="S"
-                   Grid.Column="0"
-                   HorizontalOptions="Center"
-                   VerticalOptions="Center"
-                   FontSize="22"
-                   />
-            <VerticalStackLayout Grid.Column="1">
-                <Label Text="Salário" />
-                <Label Text="29/01/2023"
-                       TextColor="#BABABA"/>
-            </VerticalStackLayout>
-            <Label Text="R$ 3.600,00"
-                   Grid.Column="2"
-                   HorizontalOptions="Center"
-                   VerticalOptions="Center"
-                   TextColor="{StaticResource Tertiary}"/>
-        </Grid>
+
+        <CollectionView x:Name="CollectionViewTransactions" HeightRequest="350">
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid ColumnDefinitions="50,*,Auto" Padding="15">
+                        <Label Text="S"
+                                Grid.Column="0"
+                                HorizontalOptions="Center"
+                                VerticalOptions="Center"
+                                FontSize="22"
+                                />
+                        <VerticalStackLayout Grid.Column="1">
+                            <Label Text="{Binding Name}" />
+                            <Label Text="{Binding Date, StringFormat='{0:dd/MM//yyyy}'}"
+                                    TextColor="#BABABA"/>
+                        </VerticalStackLayout>
+                        <Label Text="{Binding Value, StringFormat='{0:C}'}"
+                                Grid.Column="2"
+                                HorizontalOptions="Center"
+                                VerticalOptions="Center"
+                                TextColor="{StaticResource Tertiary}"/>
+                    </Grid>
+
+                </DataTemplate>
+
+            </CollectionView.ItemTemplate>
+
+        </CollectionView>
+        
         <Label 
             Text="Transaction List"
             VerticalOptions="Center" 
