Abrindo a tela de edicao atraves do TapGestureRecognizer

--- a/AppControleFinanceiro/Views/TransactionEdit.xaml
+++ b/AppControleFinanceiro/Views/TransactionEdit.xaml
@@ -30,19 +30,21 @@
         </Border>
         <Grid ColumnDefinitions="*,*" Margin="10,0">
             <RadioButton
+                x:Name="RadioIncome"
                 IsChecked="True"
                 Content="Receita"
                 Grid.Column="0"/>
             <RadioButton
+                x:Name="RadioExpense"
                 IsChecked="False"
                 Content="Despesa"
                 HorizontalOptions="End"
                 Grid.Column="1"/>
         </Grid>
 
-        <Entry Placeholder="Nome" Margin="15"/>
-        <DatePicker Margin="15"/>
-        <Entry Placeholder="Valor" Margin="15"/>
+        <Entry x:Name="EntryName" Placeholder="Nome" Margin="15"/>
+        <DatePicker x:Name="DatePickerDate" Margin="15"/>
+        <Entry x:Name="EntryValue" Placeholder="Valor" Margin="15"/>
         <Button Text="Salvar" Margin="15" HorizontalOptions="CenterAndExpand"/>
     </VerticalStackLayout>
 </ContentPage>
