--- a/AppControleFinanceiro/Views/TransactionList.xaml
+++ b/AppControleFinanceiro/Views/TransactionList.xaml
@@ -15,7 +15,7 @@
                     <Grid ColumnDefinitions="50,*,Auto" Padding="15">
                         <Grid.GestureRecognizers>
                             <TapGestureRecognizer
-                                Command="{Binding .}"
+                                CommandParameter="{Binding .}"
                                 Tapped="TapGestureRecognizer_Tapped_Goto_TransactionEdit"/>
                         </Grid.GestureRecognizers>
                         <Label Text="S"
