--- a/AppControleFinanceiro/Views/TransactionList.xaml
+++ b/AppControleFinanceiro/Views/TransactionList.xaml
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters ="clr-namespace:ControleFinanceiro.Converters"
              x:Class="ControleFinanceiro.Views.TransactionList"
              NavigationPage.HasNavigationBar="False"
              Title="Listagem">
     <ContentPage.Resources>
         <ResourceDictionary Source="/Resources/Styles/Colors.xaml" />
+        <ResourceDictionary>
+            <converters:TransactionColorValueConverter x:Key="TransactionColorValueConverter" />
+            <converters:TransactionValueConverter x:Key="TransactionValueConverter" />
+        </ResourceDictionary>
     </ContentPage.Resources>
     <VerticalStackLayout>
 
@@ -29,11 +34,11 @@
                             <Label Text="{Binding Date, StringFormat='{0:dd/MM//yyyy}'}"
                                     TextColor="#BABABA"/>
                         </VerticalStackLayout>
-                        <Label Text="{Binding Value, StringFormat='{0:C}'}"
+                        <Label Text="{Binding ., Converter={StaticResource TransactionValueConverter}}"
                                 Grid.Column="2"
                                 HorizontalOptions="Center"
                                 VerticalOptions="Center"
-                                TextColor="{StaticResource Tertiary}"/>
+                                TextColor="{Binding ., Converter={StaticResource TransactionColorValueConverter}}"/>
                     </Grid>
 
                 </DataTemplate>
